@@ -1,3 +1,5 @@
+100929  rewrote mrsend() and recv_cfg() to use non-blocking sockets w/ timeout
+
 100823  build with mingw-w64-1.0 / gcc-4.5.1 toolchain 
 	import sources to qbranch SVN
 	add usage()
